# control-orogen-motion_translator

./: CMakeLists.txt  README.md  manifest.xml  motion_translator.orogen  motion_translatorTypes.hpp
tasks/: CMakeLists.txt  Task.cpp  Task.hpp
